<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/appname">

        </TextView>


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lado_uno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </TextView>

        <EditText
            android:hint="Ingrese el lado uno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/lado_dos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </TextView>

        <EditText
            android:hint="Ingrese el lado dos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/apptitulo"
            android:textColor="">

        </TextView>


    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">


        <Button
            android:text="@string/calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

        </Button>
    </LinearLayout>

    </LinearLayout>