<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaDos"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name_pant2">

        </TextView>


    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:text="@string/namelado_uno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </TextView>

        <EditText
            android:id="@+id/result_lado1"
            android:hint="Resutlado del lado uno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </EditText>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:text="@string/namelado_dos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

        </TextView>

        <EditText
            android:id="@+id/result_lado2"
            android:hint="Resultado del lado dos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

        </EditText>




    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/reso"
            android:text="@string/namelado_dos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

        </TextView>
    </LinearLayout>
</LinearLayout>